Add pages administration module.Bugfix. Vendor Update.

--- a/config/config.json
+++ b/config/config.json
@@ -10,5 +10,9 @@
         "user": "root",
         "password": "mysql",
         "dbname": "framework_doc"
-    }
+    },
+    "BlockStyles": [
+        { "classname": "CenteredBlockStyle", "description": "Centrato" },
+        { "classname": "ExtendedBlockStyle", "description": "Esteso" }
+    ]
 }
