--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "silex/silex": "*",
         "twig/twig": "~1.18",
         "symfony/twig-bridge": "~2.6",
-        "yosymfony/config-serviceprovider": ">=1.2.2"
+        "yosymfony/config-serviceprovider": ">=1.2.2",
+        "monolog/monolog": "*"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.2",
