--- a/.htaccess
+++ b/.htaccess
@@ -9,7 +9,7 @@ RewriteEngine On
 RewriteCond %{HTTP:Authorization} ^(.+)$
 RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php [QSA,L]
+RewriteRule ^(.*)$ /index.php [QSA,L]
 </IfModule>
 
 <IfModule mod_expires.c>
