Doctrine caching implementation in config file.

--- a/config/config.json.template
+++ b/config/config.json.template
@@ -1,6 +1,7 @@
 {
     "Application.Debug": true,
     "Application.Development": true,
+    "Doctrine.caching": "",
     "MaintenanceMode": false,
     "LanguageBar.View": "App\\Site\\FlagLanguageBar.twig",
     "LanguageBar.RouteName": "languageOnly",
